--- a/samples/basic/index.html
+++ b/samples/basic/index.html
@@ -32,12 +32,14 @@
 
 
 <script src="../jquery-1.8.2.min.js"></script>
-<script src="../jquery.impulse.slider-0.2.js"></script>
+<script src="../jquery.impulse.slider-0.3.js"></script>
 <script type="text/javascript">
     $(window).load(function(){
       $('#cubeSpinner').impulseslider({
             height: 400,
-            width: 400
+            width: 400,
+          depth:200,
+          perspective:800
       });
     });
   </script>
