--- a/samples/space/index.html
+++ b/samples/space/index.html
@@ -34,12 +34,14 @@
 
 
 <script src="../jquery-1.8.2.min.js"></script>
-<script src="../jquery.impulse.slider-0.2.js"></script>
+<script src="../jquery.impulse.slider-0.3.js"></script>
 <script type="text/javascript">
     $(window).load(function(){
       $('#cubeSpinner').impulseslider({
           height: 200,
           width: 300,
+          depth: 150,
+          perspective: 800,
           pauseTime: 5000,
           transitionDuration: 1500,
           transitionEffect: "linear",
