--- a/samples/three/index.html
+++ b/samples/three/index.html
@@ -33,12 +33,14 @@
 
 
 <script src="../jquery-1.8.2.min.js"></script>
-<script src="../jquery.impulse.slider-0.2.js"></script>
+<script src="../jquery.impulse.slider-0.3.js"></script>
 <script type="text/javascript">
     $(window).load(function() {
         $('#slider').impulseslider({
             height: 450,
             width: 300,
+            depth: 300/3.5,
+            perspective: 800,
             pauseTime: 2500,
             transitionDuration: 1500,
             transitionEffect: "ease-in-out",
