--- a/samples/pentagon/index.html
+++ b/samples/pentagon/index.html
@@ -27,14 +27,14 @@
 
 
 <script src="../jquery-1.8.2.min.js"></script>
-<script src="../jquery.impulse.slider-0.3.js"></script>
+<script src="../jquery.impulse.slider-0.4.js"></script>
 <script type="text/javascript">
     $(window).load(function() {
         $('#slider').impulseslider({
-            height: 400,
-            width: 300,
-            depth: 300/1.09,
-            perspective: 2800,
+            height: 300,
+            width: 400,
+            depth: 275,
+            perspective: 2000,
             pauseTime: 1500,
             transitionDuration: 1000,
             transitionEffect: "ease-in-out",
