Fixed url for sample

--- a/samples/clouds/index.html
+++ b/samples/clouds/index.html
@@ -89,7 +89,7 @@
 <script src="../jquery-1.8.2.min.js"></script>
 <script src="js/jquery.event.move.js"></script>
 <script src="js/jquery.event.swipe.js"></script>
-<script src="../../js/jquery.impulse.slider.js"></script>
+<script src="../jquery.impulse.slider-0.4.js"></script>
 <script type="text/javascript">
     $(window).load(function() {
         var height = 150;
